# libw

./: .clang-format  CMakeLists.txt  Makefile  README.md  compile_commands.json
example/: Makefile  main.c
example/android/: AndroidManifest.xml  libw.keystore
example/android/res/values/: strings.xml
example/android/src/java/dev/trindadedev/wexample/: MainActivity.java
include/: window.h
include/glad/: glad.h
src/: glad.c  window.c
